--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -23,6 +23,10 @@
 
 body {
 	font-family: Inter, sans-serif;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .container {
