--- a/styles/input.css
+++ b/styles/input.css
@@ -19,6 +19,23 @@
 	background-color: var(--brand-200);
 }
 
+a.a-gray {
+	text-decoration: none;
+	text-align: center;
+	border: 1px solid var(--gray-600);
+	background-color: var(--gray-900);
+	cursor: pointer;
+
+	padding: 0.7rem 1rem;
+	border-radius: 0.3rem;
+
+	transition: all 0.3s ease;
+}
+
+a.a-gray:hover {
+	background-color: var(--gray-700);
+}
+
 .btn-gray {
 	border: 1px solid var(--gray-600);
 	background-color: var(--gray-900);
