--- a/pages/feed/feed-body.css
+++ b/pages/feed/feed-body.css
@@ -1,6 +1,7 @@
 .feed-title {
 	width: 100%;
 	margin: 2rem 0;
+	margin-top: 0;
 	padding: 1rem 0px;
 	text-align: center;
 	background-color: var(--gray-600);
@@ -11,6 +12,7 @@
 }
 
 .post {
+	margin-bottom: 3rem;
 	display: flex;
 	flex-direction: column;
 
@@ -20,7 +22,9 @@
 .post-head {
 	display: flex;
 	align-items: center;
+	flex-wrap: wrap;
 
+	row-gap: 1rem;
 	column-gap: 1rem;
 }
 
@@ -33,4 +37,33 @@
 .profile img {
 	width: 24px;
 	height: 24px;
+}
+
+.post-ger {
+	display: flex;
+	column-gap: 0.3rem;
+}
+
+.post-ger button {
+	padding: 0.3rem 0.5rem;
+
+	transition: all 0.3s ease-in-out;
+}
+
+.post-ger button:hover {
+	color: var(--gray-900);
+	background-color: var(--brand-100);
+}
+
+.post-body {
+	display: flex;
+	flex-direction: column;
+
+	row-gap: 0.7rem;
+}
+
+.post-acc {
+	cursor: pointer;
+	color: var(--brand-100);
+	text-decoration: underline;
 }
