--- a/pages/feed/feed-nav.css
+++ b/pages/feed/feed-nav.css
@@ -5,12 +5,10 @@ header {
 }
 
 .navbar {
-	padding: 10px 20px;
+	padding: 2rem 20px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-
-	box-shadow: 1px 2px 1px rgb(92, 91, 91);
 }
 
 .hamburger {
@@ -21,11 +19,13 @@ header {
 }
 .links {
 	height: 100px;
+	background-color: var(--gray-900);
 	position: absolute;
 	overflow: hidden;
 	top: 55px;
 	left: 0px;
 	right: 0px;
+	margin-top: 1rem;
 	padding: 20px 10px;
 
 	display: flex;
