--- a/styles/animation.css
+++ b/styles/animation.css
@@ -9,3 +9,15 @@
 		transform: translateY(0);
 	}
 }
+
+@keyframes modalAppear {
+	0% {
+		opacity: 0;
+		transform: translateY(-50px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
