--- a/pages/register/grid-img-register.css
+++ b/pages/register/grid-img-register.css
@@ -35,10 +35,25 @@
 	padding: 2rem 0;
 	display: grid;
 	gap: 1.5rem;
-	grid-template-rows: auto auto auto;
-	grid-template-columns: auto auto;
+	grid-template-rows: auto auto;
+	grid-template-columns: auto auto auto;
 	grid-template-areas:
-		"img4 img1"
-		"img4 img2"
-		"img3 img3";
+		"img4 img1 img2"
+		"img4 img3 img3";
+}
+
+.register-container {
+	display: flex;
+	align-items: center;
+
+	column-gap: 2rem;
+}
+
+.register-body {
+	width: 300px;
+	height: max-content;
+	padding: 0.7rem 1rem;
+	border: 1px solid var(--gray-600);
+	border-radius: 0.3rem;
+	box-shadow: 0px 0px 3px var(--gray-700);
 }
