--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -73,4 +73,11 @@ input:focus {
 		max-width: 43rem;
 		margin: 0 1rem;
 	}
+
+	.hamburger {
+		width: 24px;
+		height: 24px;
+
+		margin-left: auto;
+	}
 }
