--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -65,7 +65,13 @@ input:focus {
 }
 
 .hidden {
-	display: none;
+	display: none !important;
+}
+
+.disable {
+	pointer-events: none;
+	background-color: var(--gray-300) !important;
+	box-shadow: 0px 0px 3px var(--gray-600);
 }
 
 @media (max-width: 700px) {
