--- a/pages/feed/feed-body.css
+++ b/pages/feed/feed-body.css
@@ -76,6 +76,21 @@
 	row-gap: 0.7rem;
 }
 
+.post-body h3 {
+	width: 23ch;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.post-body p {
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 .post-acc {
 	cursor: pointer;
 	color: var(--brand-100);
